--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     align-items: center;
     padding: 20px;
     gap: 10px;
+    font-family: "PT-Sans", Calibri, Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .opponent, .instructions, .choice {
