--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     padding: 20px;
     gap: 10px;
     font-family: "PT-Sans", Calibri, Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #111827;
+    color: white;
 }
 
 .introduction {
@@ -23,8 +25,9 @@ body {
 
 .introduction span {
     padding: 0 15px;
-    color: #f7e061;
-    background-color: #ffed2938;
+    color: #eedb71;
+    background-color: #cac370ab;
+    font-size: 55px;
     -webkit-text-stroke: 1px #000000;
 }
 
