refactor(style): change introduction class span colors

--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
 
 .introduction span {
     padding: 0 15px;
-    color: #eedb71;
-    background-color: #cac370ab;
+    color: #f1de6d;
+    background-color: #cac27060;
     font-size: 55px;
     -webkit-text-stroke: 1px #000000;
 }
