--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
     font-size: 60px;
     font-weight: 900;
     text-align: center;
+    padding: 10px;
+    border-bottom: 5px white solid;
+    border-radius: 5px;
 }
 
 .introduction span {
