--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px red solid; */
+    border: 1px red solid;
 }
 
 body {
@@ -63,7 +63,7 @@ body {
 
 .rps {
     display: flex;
-    gap: 20px;
+    gap: 40px;
 }
 
 .rps div {
@@ -71,7 +71,20 @@ body {
     flex-direction: column;
     align-items: center;
     width: 250px;
-    padding: 10px;
+    padding: 10px 25px;
+}
+
+.box {
+    border: 3px white solid;
+    border-radius: 10px;
+    box-shadow: none; 
+    width: 250px;
+    height: 400px;
+    
+}
+
+.box:hover {
+    margin-top: 5px;
 }
 
 .display {
