--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
     display: flex;
     gap: 40px;
     width: 830px;
-    height: 450px;
+    height: 410px;
 }
 
 .rps div {
@@ -94,6 +94,11 @@ body {
 
 .box:hover {
     margin-top: 5px;
+}
+
+.text {
+    font-size: 20px;
+    font-weight: 800;
 }
 
 .display {
