--- a/style.css
+++ b/style.css
@@ -104,15 +104,27 @@ body {
 .display {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 500px;
+    gap: 15px;
+}
+
+.score {
+    font-size: 35px;
+    font-weight: 900;
 }
 
 .players {
     display: flex;
     justify-content: space-between;
+    width: 450px;
 }
 
 .human, .computer {
     display: flex;
+    align-items: center;
+    font-size: 80px;
+    color: #f1de6d;
 }
 
 
