--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px red solid;
+    /* border: 1px red solid; */
 }
 
 body {
@@ -132,10 +132,9 @@ body {
 button {
     padding: 10px 20px;
     background-color: #f1de6d;
-    color: white;
+    color: #111827;
     font-size: 25px;
     font-weight: 800;
-    -webkit-text-stroke: 1px #000000;
     border: 3px white solid;
     border-radius: 10px;
 }
