--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px red solid; */
+    border: 1px red solid;
 }
 
 body {
@@ -22,7 +22,7 @@ body {
     font-size: 60px;
     font-weight: 900;
     text-align: center;
-    padding: 10px;
+    padding: 10px 40px;
     border-bottom: 5px white solid;
     border-radius: 5px;
 }
