--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px red solid;
+    /* border: 1px red solid; */
 }
 
 body {
@@ -12,7 +12,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    gap: 10px;
+    gap: 20px;
     font-family: "PT-Sans", Calibri, Verdana, Geneva, Tahoma, sans-serif;
     background-color: #111827;
     color: white;
