--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px red solid; */
+    border: 1px red solid;
 }
 
 body {
     width: 100%;
-    height: 213vh;
+    height: 240vh;
     display: flex;
     flex-direction: column;
     align-items: center;
