--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px red solid;
 }
 
 body {
@@ -137,7 +136,8 @@ button {
     font-weight: 800;
     border: 3px white solid;
     border-radius: 10px;
-    margin-top: 50px;
+    margin: 50px;
+    user-select: none;
 }
 
 
